--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 
 # Ignore database.yml
 /config/database.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
