--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 # Ignore Byebug command history file.
 .byebug_history
 
+vendor/bundle
+
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
